# RayTracing

./: CMakeLists.txt  README.md
include/: AABB.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  material.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
scripts/: data.txt  render_and_plot.py
src/: cos_cubed.cpp  cos_density.cpp  estimate_halfway.cpp  integrate_x_sq.cpp  main.cpp  pi.cpp  sphere_importance.cpp  sphere_plot.cpp
